# city-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  sqlx-data.json
.github/workflows/: build.yml  ci.yml  master-release.yml  release.yml  tag-release.yml
docs/: README.md  report.md
helm/: Chart.yaml  requirements.yaml  values.yaml
helm/templates/: deployment.yaml  service.yaml
metrics/grafana/dashboards/: config.yaml
metrics/grafana/dashboards/city-api/: default.json
metrics/grafana/dashboards/default/: default.json
metrics/grafana/datasources/: prometheus.yaml
metrics/prometheus/: prometheus.yaml
migration/: Cargo.toml
sql/: init.sql  insert_city.sql
src/: city.rs  db.rs  lib.rs  main.rs
src/routes/: create_city.rs  fetch_cities.rs  health.rs  mod.rs
tests/: integration_tests.rs
tests/common/: mod.rs
