[package]
name = "city-api"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
actix-web = "4.3.1"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"

[workspace]
members = [".", "migration"]
