[package]
name = "city-api"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
actix-web = "4.3.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# (info): to check query macros in offline mode install `sqlx-cli`
# https://github.com/launchbadge/sqlx/blob/v0.6.2/sqlx-cli/README.md#enable-building-in-offline-mode-with-query
sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls" , "postgres", "macros", "offline"] }
