[package]
name = "city-api"
version = "0.0.4"
edition = "2021"
publish = false
license = "MIT"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
actix-web = { version = "4.3.1", features = ["rustls"] }
log = "0.4.17"
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.3", features = [
  "runtime-actix-rustls",
  "postgres",
  "macros",
  "offline",
] }
